--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <button class="mob_message_btn mob_message_btn_2"> <img src="asset_mobile/images/message.svg"
                     alt="">Message</button>
             <button class="mob_call_btn"> <img src="asset_mobile/images/call.svg" alt="">Call</button>
-            <button class="mob_call_btn mob_call_trial">Free Trial Classes</button>
+            <button class="mob_call_btn mob_call_trial">Free Trial Class</button>
         </div>
 
 
