--- a/academy-filter.html
+++ b/academy-filter.html
@@ -172,5 +172,6 @@
 </body>
 
 <script src="asset_mobile/js/mobile_home.js"></script>
+<script src="asset_mobile/js/mobile_academy_listing.js"></script>
 
 </html>
