--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,7 @@
     </footer>
 
     <script src="asset_mobile/js/mobile_home.js"></script>
+    <script src="asset_mobile/js/mobile_academy_listing.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
