--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="mob_academy_listing_name_box">
 
                     <div class="mob_academy_listing_name_flex">
-                        <p class="mob_academy_listing_name">udaan sports academy</p>
+                        <span class="mob_academy_listing_name">udaan sports academy</span>
                         <img src="asset_mobile/images/star_tick.svg" alt="">
                     </div>
 
@@ -171,7 +171,7 @@
                 <div class="mob_academy_listing_name_box">
 
                     <div class="mob_academy_listing_name_flex">
-                        <p class="mob_academy_listing_name">udaan sports academy</p>
+                        <span class="mob_academy_listing_name">udaan sports academy</span>
                         <img src="asset_mobile/images/star_tick.svg" alt="">
                     </div>
 
@@ -280,7 +280,7 @@
                 <div class="mob_academy_listing_name_box">
 
                     <div class="mob_academy_listing_name_flex">
-                        <p class="mob_academy_listing_name">udaan sports academy</p>
+                        <span class="mob_academy_listing_name">udaan sports academy</span>
                         <img src="asset_mobile/images/star_tick.svg" alt="">
                     </div>
 
@@ -389,7 +389,7 @@
                 <div class="mob_academy_listing_name_box">
 
                     <div class="mob_academy_listing_name_flex">
-                        <p class="mob_academy_listing_name">udaan sports academy</p>
+                        <span class="mob_academy_listing_name">udaan sports academy</span>
                         <img src="asset_mobile/images/star_tick.svg" alt="">
                     </div>
 
